@startuml
package Charge{
    class Remittance {
        name: string
        sepa_id: string
        created_at: datetime
        payment_date: datetime
        concept: string
    }

    class Receipt {
        amount: float
        bank_account_owner: string
        iban: string
        authorization: string
    }

    Remittance *--> Receipt

    class State
    class Created
    class Send
    class Paid
    State <|-- Created
    State <|-- Send
    State <|-- Paid
}
@enduml
